tests/types/errors/omitted_return_value_named_function.mog
fn answer() {
    return 42
}
